fix code button alignment

--- a/site/styles.css
+++ b/site/styles.css
@@ -558,7 +558,7 @@ input[type=number] {
 }
 
 .code-button {
-    font-size: 1em;
+    font-size: 0.9em;
     margin: 0 0 0 0.2em;
     height: auto;
 }
